--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <phpunit colors="true"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd">
+        xsi:noNamespaceSchemaLocation="vendor/phpunit/phpunit/phpunit.xsd"
+        forceCoversAnnotation="true">
     <testsuites>
         <testsuite name="library">
             <directory suffix="Test.php">test/</directory>
