--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ matrix:
   include:
     - php: 5.5
       env:
+        - COMPOSER_ARGUMENTS="--prefer-lowest"
+    - php: 5.5
+      env:
         - EXECUTE_CS_CHECK=true
     - php: 5.6
       env:
