--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_install:
   - if [[ $EXECUTE_TEST_COVERALLS == 'true' ]]; then composer require --dev --no-update satooshi/php-coveralls:dev-master; fi
 
 install:
-  - travis_retry composer install --no-interaction
+  - travis_retry composer install --no-interaction $COMPOSER_ARGUMENTS
   - composer info -i
 
 script:
