[composer] Add scripts aliases

--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,15 @@
         "psr-4": {
             "Vendor\\ComponentTest\\": "test/"
         }
+    },
+    "scripts": {
+        "check": [
+            "@cs-check",
+            "@test"
+        ],
+        "cs-check": "php-cs-fixer fix -v --diff --dry-run",
+        "cs-fix": "php-cs-fixer fix -v",
+        "test": "phpunit",
+        "test-coverage": "phpunit --coverage-clover clover.xml"
     }
 }
