--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     },
     "require-dev": {
         "fabpot/php-cs-fixer": "~1.6",
-        "phpunit/phpunit": "~4.0"
+        "phpunit/phpunit": "^4.8.0"
     },
     "suggest": {
     },
