--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">= 5.5"
     },
     "require-dev": {
-        "fabpot/php-cs-fixer": "1.11.*",
+        "friendsofphp/php-cs-fixer": "1.11.*",
         "phpunit/phpunit": "^4.8.0"
     },
     "suggest": {
