Use full argument names instead abreviations

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,5 +38,5 @@ after_script:
   - if [[ $EXECUTE_TEST_COVERALLS == 'true' ]]; then
     travis_retry wget https://github.com/satooshi/php-coveralls/releases/download/v1.0.1/coveralls.phar;
     chmod +x coveralls.phar;
-    travis_retry php coveralls.phar -v;
+    travis_retry php coveralls.phar --verbose;
     fi
